--- a/css/style.css
+++ b/css/style.css
@@ -1,105 +1,121 @@
-body, html {
-    margin: 0;
+/* GLOBAL STYLES */
+
+:root {
+    --color-primary: #4949DB;
+    --color-primary-dark: #3838A8;
+    --color-primary-darker: #272775;
+    --color-primary-deepest: #161642;
+    --color-transparent-dark: #05050F00;
+    --color-accent: #DDD627;
+    --color-white: #FFFFFF;
+    --font-primary: 'Montserrat', sans-serif;
+}
+
+* {
     padding: 0;
-    height: 100%;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: var(--font-primary);
 }
 
 /* HEADER */
 
-.header-area {
+.header-nav {
     display: flex;
-    justify-content: center;
     align-items: center;
-    background-color: #161642;
-    max-height: 100px;
-    min-height: 100px;
+    background-color: var(--color-primary-deepest);
+    height: 6.25rem;
     position: fixed;
-    width:100%;
-    z-index: 2;
+    width: 100%;
+    z-index: 3;
 }
 
-.hamburguer-menu {
+.header-nav__content {
+    display: flex;
+    justify-content: space-between;;
+    align-items: center;
+    flex-direction: row;
+}
+
+.header-nav__logo {
+    max-height: 3.75rem;
+    margin: 0;
+}
+
+.header-nav__list {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    list-style: none;
+    margin: 0;
+}
+
+.header-nav__list li {
+    transition: transform 0.3s ease;
+}
+
+.header-nav__list li:hover {
+    transform: scale(1.1);
+}
+
+.header-nav__list li a {
+    color: #DDD627;
+    font-weight: bold;
+    font-size: 1.3125rem;
+    text-decoration: none;
+}
+
+/* HEADER == BTN */
+
+.header-nav__btn {
     display: none;
 }
 
-.hamburguer-menu i {
-    font-size: 50px;
-    color: #DDD627;
-    cursor: pointer;
-    font-weight: 400;
-    transition: all 0.4s;
-}
-
-.hamburguer-menu {
-    transition: all 0.4s;
-}
-
-.hamburguer-menu:hover {
-    transform: scale(1.05);
-}
-
-.header-box {
+.header-nav__mobile {
     display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    position: relative;
+    background-color:red;
+}
+
+/* Home */
+
+.home {
+    display: flex;
+    justify-content: center;
     align-items: center;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-.header-box img {
-    height: 60px;
-}
-
-.nav-links {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: center;
-    margin: 0;
-    gap: 1rem;
-}
-
-.nav-links li {
-    display: flex;
-    flex-direction: row;
-}
-
-.nav-links li a {
-    list-style: none;
-    text-decoration: none;
-    font-family: "Montserrat", sans-serif;
-    font-weight: bold;
-    font-size: 21px;
-    color: #DDD627;
-    transition: all 0.4s;
-}
-
-.header-box ul li a:hover {
-    transform: scale(1.05)
-}
-
-/* HOME */
-.home-section {
     height: 100vh;
 }
 
-.home-box {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    height: 100%;
-    width: 100%;
+
+.background__carousel {
+    height: 100vh;
 }
 
-/* CAROUSEL */
+.item-one__carousel {
+    background-image: url('../images/destaqueone.png');
+}
+
+.item-two__carousel {
+    background-image: url('../images/destaquedois.png');
+}
+
+.item-three__carousel {
+    background-image: url('../images/destaquetres.png');
+}
+
+.item-four__carousel {
+    background-image: url('../images/destaquequatro.png');
+}
 
 .owl-carousel.owl-theme {
     display: flex;
-    position: relative;
+    position: absolute;
     align-items: center;
     height: 100%;
     width: 100%;
+    z-index: 1;
 }
 
 .owl-dots {
@@ -107,67 +123,95 @@ body, html {
     display: flex;
     flex-direction: column; /* vertical */
     position: absolute;
+    gap: 30px;
     right: 20px;
     z-index: 1;
 }
 
 .owl-theme .owl-dots .owl-dot span {
-    background-color: rgba(255, 255, 255, 0.2);
-    backdrop-filter: blur(5px);
-    border: 1px solid #DDD627;
-    height: 1.875rem;
-    width: 1.875rem;
-}
-
-.owl-theme .owl-dots .owl-dot.active span, .owl-theme .owl-dots .owl-dot:hover span {
-    background-color: #DDD627 !important;
-}
-
-.item {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100dvh;
-    background-size: cover;
-    background-position: center;
-    color: white;
-    font-size: 4rem;
-    font-family: "Montserrat", sans-serif;
-    font-weight: bold;
+    background-color: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(5px);
+    margin: 0;
+    border: 1px solid var(--color-accent);
+    height: 1.875rem;
+    width: 1.875rem;
+    color: #DDD627;
 }
 
-.destaque-1 {
-    background-image: url('../images/destaqueone.png');
+.owl-theme .owl-dots .owl-dot.active span, .owl-theme .owl-dots .owl-dot:hover span {
+    color: #05050F;
 }
 
-.destaque-2 {
-    background-image: url('../images/destaquedois.png');
+.owl-theme .owl-dots .owl-dot span::after {
+    content: counter(count 1);
 }
 
-.destaque-3 {
-    background-image: url('../images/destaquetres.png');
+.owl-theme .owl-dots .owl-dot.active span, .owl-theme .owl-dots .owl-dot:hover span {
+    background-color: var(--color-accent) !important;
 }
 
-.destaque-4 {
-    background-image: url('../images/destaquequatro.png');
+.home__container {
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+    max-width: 1030px;
+    z-index: 40;
 }
+
+/* RESPONSIVO */
 
 @media (max-width: 768px) {
-    .nav-links {
+    .header-nav__list {
         display: none;
-    }
-
-    .hamburguer-menu {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
+        flex-direction: column;
+        gap: 1rem;
+        background-color: var(--color-primary-deepest);
+        position: absolute;
+        top: 100px;
+        right: 0;
+        padding: 1rem;
+        box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+        border-radius: 0px 0px 0px 16px;
 }
 
-/* HEADER MEDIA QUERIES */
+    .header-nav__list.show {
+        display: flex;
+    }
 
-@media (max-width: 425px) {
-    .header-box img {
-        height: 40px;
+
+    .header-nav__btn {
+        display: flex;
+        width: 1.875rem;
+        height: 1.5rem;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        cursor: pointer;
+    }
+
+    .header-nav__btn span {
+        width: 100%;
+        height: 0.2938rem;
+        background-color: var(--color-accent);
+        border-radius: 0.125rem;
+        transition: transform 0.4s ease, opacity 0.3s ease;
+        transform-origin: center;
+    }
+
+    /* ESTADO ATIVO (X) */
+    .header-nav__btn.active span:nth-child(1) {
+        transform: rotate(45deg) translateY(13px);
+    }
+
+    .header-nav__btn.active span:nth-child(2) {
+        opacity: 0;
+        transform: translateX(16px);
+    }
+
+    .header-nav__btn.active span:nth-child(3) {
+        transform: rotate(-45deg) translateY(-13px);
     }
 }
