--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,7 @@
 
 .background__carousel {
     height: 100vh;
+    width: 100vw;
 }
 
 .item-one__carousel {
@@ -133,19 +134,28 @@
 .owl-carousel.owl-theme {
     display: flex;
     position: absolute;
+    justify-content: center;
     align-items: center;
     height: 100%;
     width: 100%;
 }
 
 .owl-dots {
-    transform: translateX(-50%);
     display: flex;
-    flex-direction: column; /* vertical */
+    flex-direction: column;
     position: absolute;
+    justify-content: center;
+    align-items: flex-end;
     gap: 30px;
-    right: 20px;
+    width: 100%;
+    max-width: 1320px;
+    height: 100%;
+    /* right: 20px; */
     z-index: 1;
+}
+
+.owl-theme .owl-nav.disabled+.owl-dots {
+    margin: 0;
 }
 
 .owl-theme .owl-dots .owl-dot span {
@@ -157,10 +167,7 @@
     border: 1px solid #DDD627;
     height: 1.875rem;
     width: 1.875rem;
-}
-
-.owl-theme .owl-dots .owl-dot.active span, .owl-theme .owl-dots .owl-dot:hover span {
-    color: #05050F;
+    color: var(--color-accent);
 }
 
 .owl-theme .owl-dots .owl-dot span::after {
@@ -169,23 +176,106 @@
 
 .owl-theme .owl-dots .owl-dot.active span, .owl-theme .owl-dots .owl-dot:hover span {
     background-color: var(--color-accent) !important;
+    color: black;
 }
 
 .home__container {
     display: flex;
+    position: absolute;
     flex-direction: column;
     align-items: baseline;
+    z-index: 4;
+}
+
+.home__container h2 {
     max-width: 1030px;
-    z-index: 40;
+    font-family: var(--font-primary);
+    font-size: 4.5rem;
+    font-weight: bold;
+    color: var(--color-white);
+}
+
+.home__container a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 2.25rem;
+    max-width: 7.1875rem;
+    height: 2.5rem;
+    background-color: var(--color-accent);
+    font-family: var(--font-primary);
+    font-weight: bold;
+    padding: 0.75rem;
+    transition: all 0.4s;
+}
+
+.home__container a:hover {
+    transform: scale(1.04);
+    cursor: pointer;
+}
+
+/* BIO */
+
+.bio {
+    background-color: #000;
+}
+
+.c__bio {
+    display: flex;
+    color: var(--color-white);
+    align-items: center;
+    flex-direction: column;
+}
+
+.c__bio h2 {
+    font-weight: bold;
+    color: var(--color-accent);
+}
+
+.accordion {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    width: 100%;
+}
+
+.accordion-header {
+    background-color: var(--color-primary-deepest);
+}
+
+.accordion-button {
+    background-color: var(--color-primary-deepest);
+    font-weight: bold;
+    font-size: 21px;
+    color: var(--color-accent);
+    box-shadow: none;
+}
+
+.accordion-button:not(.collapsed) {
+    font-weight: bold;
+    background-color: #161642;
+    font-size: 21px;
+    color: var(--color-accent);
+}
+
+.accordion-body {
+    background-color: var(--color-primary-darker);
+    color: var(--color-white);
 }
 
 @media (max-width: 768px) {
-    .nav-links {
+    .header-nav__list {
         display: none;
     }
 
     .header-nav__list.show {
         display: flex;
+        position: absolute;
+        flex-direction: column;
+        top: 100px;
+        right: 0;
+        background-color: var(--color-primary-darker);
+        padding-left: 0;
     }
 
 
