--- a/css/style.css
+++ b/css/style.css
@@ -269,6 +269,7 @@
     color: var(--color-white);
     align-items: center;
     flex-direction: column;
+    max-width: 51.25rem;
 }
 
 .bio__title {
@@ -372,7 +373,6 @@
 .c__characters__container {
     max-width: 1240px;
     margin: 0 auto;
-    padding: 0 1rem;
 }
 
 .c__characters__title {
@@ -392,22 +392,20 @@
 }
 
 .c__characters__carousel .owl-item {
-    display: flex;
-    justify-content: center;
+    max-width: 190px;
     padding: 0 10px;
     box-sizing: border-box;
 }
 
 .c__characters__item {
-    height: 380px;
-    width: 190px;
+    height: 23.75rem;
+    width: 11.875rem;
     background-color: #1a1a1a;
     border: 1px solid rgba(255, 255, 255, 0.1);
     border-bottom: 3px solid rgba(255, 255, 255, 0.2);
     overflow: hidden;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.25);
     transition: transform 0.3s ease;
-
     display: flex;
     align-items: flex-end;
     justify-content: center;
@@ -438,8 +436,8 @@
 
 .c__characters__carousel .owl-dot span {
     background-color: #ccc;
-    width: 12px;
-    height: 12px;
+    width: 0.75rem;
+    height: 0.75rem;
     border-radius: 50%;
     display: inline-block;
 }
@@ -532,7 +530,72 @@
     background-repeat: no-repeat;
 }
 
+/* HOUSES CAROUSEL */
+
+.c__houses {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--color-transparent-dark);
+}
+
+.c__houses h2 {
+    font-family: var(--font-primary);
+    color: var(--color-accent);
+    font-weight: bold;
+    font-size: 36px;
+}
+
+.c__houses__box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 820px;
+}
+
+.houses-carousel .item {
+    border-radius: 1rem;
+    background-color: red;
+    width: 820px;
+    height: 460px;
+}
+
+.owl-nav {
+    position: absolute;
+    display: flex;
+    justify-content: space-between;
+    height: 100%;
+    width: 100%;
+    top: 0;
+}
+
+.btn-default {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 30px;
+    width: 30px;
+    border: none;
+    border-radius: 50%;
+}
+
+
 @media (max-width: 768px) {
+
+    .home {
+        align-items: flex-end;
+    }
+
+    .home-carousel .owl-dots {
+        padding-left: 1rem;
+        flex-direction: row;
+        align-items: normal;
+        justify-content: flex-start;
+        height: 10%;
+        top: 150px;
+    }
+
     .header-nav__list {
         display: none;
     }
@@ -541,10 +604,14 @@
         display: flex;
         position: absolute;
         flex-direction: column;
-        top: 100px;
+        top: 0;
         right: 0;
         background-color: var(--color-primary-darker);
         padding-left: 0;
+        padding: 1rem;
+        padding-top: 82px;
+        border-radius: 0px 0px 0px 16px;
+
     }
 
 
@@ -556,6 +623,7 @@
         justify-content: space-between;
         align-items: center;
         cursor: pointer;
+        z-index: 2;
     }
 
     .header-nav__btn span {
@@ -579,5 +647,16 @@
 
     .header-nav__btn.active span:nth-child(3) {
         transform: rotate(-45deg) translateY(-13px);
+    }
+}
+
+@media (max-width: 480px) {
+
+    .home__container {
+        height: 70%;
+    }
+
+    .home__container h2 {
+        font-size: 48px;
     }
 }
