--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,6 @@
     flex-direction: column;
     align-items: flex-end;
     position: relative;
-    background-color:red;
 }
 
 /* Home */
@@ -126,7 +125,6 @@
     background-repeat: no-repeat;
 }
 
-/* Imagens de fundo para cada slide */
 .home-carousel .item-one__carousel {
     background-image: url('../images/destaqueone.png');
 }
@@ -149,7 +147,7 @@
     position: absolute;
     justify-content: center;
     align-items: flex-end;
-    gap: 30px;
+    gap: 1.875rem;
     width: 100%;
     max-width: 1320px;
     height: 100%;
@@ -187,11 +185,11 @@
     pointer-events: none;
     z-index: 2;
     padding: 2rem 1rem;
-    max-width: 1320px;
+    max-width: 82.5rem;
 }
 
 .home__container h2 {
-    max-width: 1030px;
+    max-width: 64.375rem;
     font-family: var(--font-primary);
     font-size: 4.5rem;
     font-weight: bold;
@@ -199,7 +197,7 @@
     margin-bottom: 1.5rem;
 }
 
-.home__container a {
+.btn-default {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -216,9 +214,13 @@
     color: black;
 }
 
-.home__container a:hover {
+.btn-default:hover {
     transform: scale(1.04);
     cursor: pointer;
+}
+
+#bio {
+  scroll-margin-top: 6.25rem;
 }
 
 .arrow__down {
@@ -236,8 +238,8 @@
 }
 
 .arrow__down img {
-    height: 30px;
-    width: 40px;
+    height: 1.875rem;
+    width: 2.5rem;
     animation: bounce 1s infinite;
 }
 
@@ -307,7 +309,7 @@
 }
 
 .accordion-button {
-    border-radius: 10px;
+    border-radius: 0.625rem;
 }
 
 .accordion-button:focus {
@@ -322,7 +324,7 @@
 .accordion-button {
     background-color: var(--color-primary-deepest);
     font-weight: bold;
-    font-size: 21px;
+    font-size: 1.3125rem;
     color: var(--color-accent);
     box-shadow: none;
     outline: none;
@@ -331,7 +333,7 @@
 .accordion-button:not(.collapsed) {
     font-weight: bold;
     background-color: #161642;
-    font-size: 21px;
+    font-size: 1.3125rem;
     color: var(--color-accent);
 }
 
@@ -392,7 +394,7 @@
 }
 
 .c__characters__carousel .owl-item {
-    max-width: 190px;
+    max-width: 11.875rem;
     padding: 0 10px;
     box-sizing: border-box;
 }
@@ -401,8 +403,6 @@
     height: 23.75rem;
     width: 11.875rem;
     background-color: #1a1a1a;
-    border: 1px solid rgba(255, 255, 255, 0.1);
-    border-bottom: 3px solid rgba(255, 255, 255, 0.2);
     overflow: hidden;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.25);
     transition: transform 0.3s ease;
@@ -410,6 +410,21 @@
     align-items: flex-end;
     justify-content: center;
     padding-bottom: 1rem;
+    position: relative;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.degrade-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    z-index: 1;
+    background: linear-gradient(to top, rgba(5, 5, 15, 0.8) 0%, rgba(5, 5, 15, 0.0) 100%);
 }
 
 .c__characters__item:hover {
@@ -428,6 +443,9 @@
     background: none;
     border: none;
     border-radius: 0;
+
+    position: relative;
+    z-index: 2;
 }
 
 .c__characters__carousel .owl-dots {
@@ -533,55 +551,320 @@
 /* HOUSES CAROUSEL */
 
 .c__houses {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: var(--color-transparent-dark);
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	background-color: var(--color-transparent-dark);
 }
 
 .c__houses h2 {
-    font-family: var(--font-primary);
-    color: var(--color-accent);
-    font-weight: bold;
-    font-size: 36px;
+	font-family: var(--font-primary);
+	color: var(--color-accent);
+	font-weight: bold;
+	font-size: 2.25rem;
 }
 
 .c__houses__box {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    max-width: 820px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	max-width: 51.25rem;
+	position: relative;
 }
 
 .houses-carousel .item {
-    border-radius: 1rem;
-    background-color: red;
-    width: 820px;
-    height: 460px;
+	border-radius: 1rem;
+	background-color: red;
+	width: 51.25rem;
+	height: 28.75rem;
 }
+
+/* OWL NAVIGATION BUTTONS */
 
 .owl-nav {
-    position: absolute;
-    display: flex;
-    justify-content: space-between;
-    height: 100%;
-    width: 100%;
-    top: 0;
+	pointer-events: none;
+	position: absolute;
+	display: flex;
+	justify-content: space-between;
+	height: 100%;
+	width: 100%;
+	top: 0;
+	left: 0;
 }
 
-.btn-default {
+.owl-nav button {
+	pointer-events: auto;
+	border: none !important;
+	color: var(--color-dark) !important;
+	cursor: pointer;
+	border-radius: 50%;
+	transition: transform 0.2s ease;
+	box-shadow: none !important;
+}
+
+.btn-carousel {
+    width: 1.875rem;
+    height: 1.875rem;
+    border: none;
+    background-color: white;
+    border-radius: 50%;
+    cursor: pointer;
+    position: relative;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
+    transition: transform 0.2s ease;
+}
+
+.arrow-left::before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translate(-50%, -50%) rotate(45deg);
+    width: 0.875rem;
+    height: 0.875rem;
+    border-left: 0.1875rem solid black;
+    border-bottom: 0.1875rem solid black;
+}
+
+.arrow-right::before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    right: 3px;
+    transform: translate(-50%, -50%) rotate(-135deg);
+    width: 0.875rem;
+    height: 0.875rem;
+    border-left: 0.1875rem solid black;
+    border-bottom: 0.1875rem solid black;
+}
+
+.owl-nav button:hover,
+.owl-theme .owl-nav [class*=owl-]:hover {
+	transform: scale(1.1);
+	color: var(--color-dark) !important;
+	box-shadow: none !important;
+	border: none !important;
+	text-decoration: none !important;
+}
+
+/* Reset geral para Owl nav */
+
+.owl-nav,
+.owl-prev,
+.owl-next {
+	border: none !important;
+	color: inherit !important;
+	box-shadow: none !important;
+	background: none !important;
+}
+
+.owl-nav:hover,
+.owl-prev:hover,
+.owl-next:hover {
+	border: none !important;
+	color: inherit !important;
+	box-shadow: none !important;
+	background: none !important;
+}
+
+.owl-prev i,
+.owl-next i {
+	display: inline-block;
+	transition: transform 0.2s ease;
+	box-shadow: none !important;
+}
+
+.owl-prev i:hover,
+.owl-next i:hover {
+	transform: scale(1.1);
+	box-shadow: none !important;
+}
+
+.owl-theme .owl-nav {
+	margin: 0;
+}
+
+.slider-nav {
+	position: absolute;
+	top: 50%;
+	left: 0;
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
+	transform: translateY(-50%);
+	pointer-events: none;
+	z-index: 2;
+}
+
+.slider-nav .am-next,
+.slider-nav .am-prev {
+	width: 1.875rem;
+	height: 1.875rem;
+	background: none;
+	border: none;
+	border-radius: 50%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	pointer-events: auto;
+	cursor: pointer;
+	color: var(--color-white);
+	transition: transform 0.2s ease;
+}
+
+.slider-nav .am-next:hover,
+.slider-nav .am-prev:hover {
+	transform: scale(1.1);
+	color: var(--color-accent);
+}
+
+.slider-nav .am-next i,
+.slider-nav .am-prev i {
+	font-size: 1rem;
+	line-height: 1;
+	pointer-events: none;
+}
+
+/* DESCRIÇÃO DAS CASAS */
+
+.c__houses__description {
+	font-family: var(--font-primary);
+	font-size: 1rem;
+	color: var(--color-white);
+	text-align: justify;
+	margin-top: 1.5rem;
+}
+
+.c__houses__description strong {
+	color: var(--color-accent);
+}
+
+.houses-carousel .owl-dots {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1.5rem;
+    pointer-events: all;
+    z-index: 3;
+}
+
+.houses-carousel.owl-theme .owl-nav.disabled + .owl-dots {
+    margin-top: 1.5rem;
+}
+
+.houses-carousel.owl-theme .owl-dots .owl-dot span {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 30px;
-    width: 30px;
-    border: none;
-    border-radius: 50%;
+    background-color: transparent;
+    border: 1px solid #ffffff;
+    height: 0.625rem;
+    width: 0.625rem;
+    color: #ffffff;
+    transition: background-color 0.3s ease, color 0.3s ease;
 }
 
+.houses-carousel.owl-theme .owl-dots .owl-dot.active span,
+.houses-carousel.owl-theme .owl-dots .owl-dot:hover span {
+    background-color: #e6e64f !important;
+    border-color: #e6e64f;
+    color: black;
+}
 
-@media (max-width: 768px) {
+.c__join {
+    background-color: var(--color-transparent-dark);
+    padding-top: 4rem;
+    color: var(--color-accent);
+    text-align: center;
+}
+
+.c__join__title {
+    font-size: 2rem;
+    font-weight: bold;
+    margin-bottom: 2rem;
+}
+
+.c__join__form {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+    align-items: center;
+}
+
+.c__form__row {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.25rem;
+    justify-content: center;
+    width: 100%;
+    max-width: 56.25rem;
+}
+
+.c__form__group {
+    display: flex;
+    flex-direction: column;
+    flex: 1 1 auto;
+}
+
+.c__form__group label {
+    color: #ffffff;
+    margin-bottom: 0.3rem;
+    font-size: 0.9rem;
+    text-align: left;
+}
+
+.c__form__group input {
+    width: 100%;
+    background-color: #1c1a3a;
+    border: none;
+    border-radius: 0.375rem;
+    padding: 0.6rem 1rem;
+    color: #fff;
+    font-size: 0.95rem;
+}
+
+.c__form__group input::placeholder {
+    color: #ccc;
+}
+
+.c__form__button {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+
+.c__form__button button {
+    background-color: var(--color-accent);
+    color: #000;
+    font-weight: bold;
+    border: none;
+    border-radius: 1.25rem;
+    font-size: 1rem;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.large_group {
+    max-width: 25rem;
+}
+
+.medium_group {
+    max-width: 18.4375rem;
+}
+
+.small_group {
+    max-width: 11.875rem;
+}
+
+.btn-form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 8.125rem;
+    font-size: 1rem;
+}
+
+@media (max-width: 1024px) {
 
     .home {
         align-items: flex-end;
@@ -594,6 +877,10 @@
         justify-content: flex-start;
         height: 10%;
         top: 150px;
+    }
+
+    .home__container {
+        top: -140px;
     }
 
     .header-nav__list {
@@ -635,7 +922,6 @@
         transform-origin: center;
     }
 
-    /* ESTADO ATIVO (X) */
     .header-nav__btn.active span:nth-child(1) {
         transform: rotate(45deg) translateY(13px);
     }
@@ -648,15 +934,153 @@
     .header-nav__btn.active span:nth-child(3) {
         transform: rotate(-45deg) translateY(-13px);
     }
+
+}
+
+@media (max-width: 768px) {
+
+    .home {
+        align-items: flex-end;
+    }
+
+    .home-carousel .owl-dots {
+        padding-left: 1rem;
+        flex-direction: row;
+        align-items: normal;
+        justify-content: flex-start;
+        height: 10%;
+        top: 9.375rem;
+    }
+
+    .home__container {
+        top: -4.375rem;
+    }
+
+    .header-nav__list {
+        display: none;
+    }
+
+    .header-nav__list.show {
+        display: flex;
+        position: absolute;
+        flex-direction: column;
+        top: 0;
+        right: 0;
+        background-color: var(--color-primary-darker);
+        padding-left: 0;
+        padding: 1rem;
+        padding-top: 82px;
+        border-radius: 0px 0px 0px 16px;
+
+    }
+
+
+    .header-nav__btn {
+        display: flex;
+        width: 1.875rem;
+        height: 1.5rem;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        cursor: pointer;
+        z-index: 2;
+    }
+
+    .header-nav__btn span {
+        width: 100%;
+        height: 0.2938rem;
+        background-color: var(--color-accent);
+        border-radius: 0.125rem;
+        transition: transform 0.4s ease, opacity 0.3s ease;
+        transform-origin: center;
+    }
+
+    .header-nav__btn.active span:nth-child(1) {
+        transform: rotate(45deg) translateY(0.8125rem);
+    }
+
+    .header-nav__btn.active span:nth-child(2) {
+        opacity: 0;
+        transform: translateX(1rem);
+    }
+
+    .header-nav__btn.active span:nth-child(3) {
+        transform: rotate(-45deg) translateY(-0.8125rem);
+    }
+
+    .large_group {
+        max-width: 25rem;
+    }
+
+    .medium_group {
+        max-width: 18.4375rem;
+    }
+
+    .small_group {
+        max-width: 10.625rem;
+    }
+
 }
 
 @media (max-width: 480px) {
 
     .home__container {
         height: 70%;
+        top: 0;
     }
 
     .home__container h2 {
-        font-size: 48px;
+        font-size: 3rem;
+    }
+
+    .large_group {
+        max-width: 21.5625rem;
+    }
+
+    .medium_group {
+        max-width: 21.5625rem;
+    }
+
+    .small_group {
+        max-width: 10rem;
+    }
+
+    #grupo_sangue {
+        width: 21.5625rem !important;
+        max-width: none;
+        flex: 0 0 auto;
+    }
+
+    #sangue {
+        width: 21.5625rem !important;
+        max-width: none;
+    }
+}
+
+@media (max-width: 375px) {
+
+    #grupo_sangue {
+        width: 100% !important;
+        max-width: 21.5625rem;
+        flex: 0 0 100%;
+    }
+
+    #sangue {
+        width: 100% !important;
+        max-width: 100%;
+    }
+}
+
+@media (max-width: 320px) {
+    .large_group {
+        max-width: 100%;
+    }
+
+    .medium_group {
+        max-width: 100%;
+    }
+
+    .small_group {
+        max-width: 100%;
     }
 }
