--- a/css/style.css
+++ b/css/style.css
@@ -779,6 +779,13 @@
     text-align: center;
 }
 
+.c__join__container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
 .c__join__title {
     font-size: 2rem;
     font-weight: bold;
@@ -790,6 +797,7 @@
     flex-direction: column;
     gap: 1.5rem;
     align-items: center;
+    max-width: 820px;
 }
 
 .c__form__row {
